--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
