--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.5.3",
     "chance": "^1.1.7",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "material-ui": "^0.20.2",
@@ -22,6 +24,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^17.0.1",
     "react-textarea-autosize": "^8.3.0",
     "react-trello": "^2.2.5",
     "reactstrap": "^8.7.1",
