--- a/package.json
+++ b/package.json
@@ -11,14 +11,28 @@
     "bootstrap": "^4.5.3",
     "chance": "^1.1.7",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "material-ui": "^0.20.2",
+    "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^17.0.1",
+    "react-textarea-autosize": "^8.3.0",
+    "react-trello": "^2.2.5",
+    "reactstrap": "^8.7.1",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
     "socket.io-client": "^3.0.1",
+    "styled-components": "^5.0.1",
     "twilio": "^3.51.0",
     "twilio-chat": "^4.0.0"
   },
