--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "twilio-chat": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd server/ && npm start",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
