--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "cd server/ && npm start",
     "start:dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build -- --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
