--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^4.5.3",
     "chance": "^1.1.7",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
