--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "material-ui": "^0.20.2",
@@ -24,6 +25,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
