--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
     "prop-types": "^15.7.2",
+    "proxy": "^1.0.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^17.0.1",
@@ -39,6 +41,7 @@
     "redux-logger": "^3.0.6",
     "socket.io-client": "^3.0.1",
     "styled-components": "^5.0.1",
+    "sweetalert2": "^10.10.2",
     "twilio": "^3.51.0",
     "twilio-chat": "^4.0.0"
   },
