--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "socket.io-client": "^3.0.1",
+    "stream-chat": "^2.8.4",
+    "stream-chat-react": "^3.2.4",
     "styled-components": "^5.0.1",
     "sweetalert2": "^10.10.2",
+    "talkjs": "^0.14.3",
     "twilio": "^3.51.0",
     "twilio-chat": "^4.0.0",
     "vue-sweetalert2": "^4.1.1"
