--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-ravepayment": "^3.0.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -40,9 +41,12 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
+    "sendbird": "^3.0.140",
     "socket.io-client": "^3.0.1",
     "styled-components": "^5.0.1",
     "sweetalert2": "^10.10.2",
+    "talk": "^0.7.1",
+    "talkjs": "^0.14.3",
     "twilio": "^3.51.0",
     "twilio-chat": "^4.0.0",
     "vue-sweetalert2": "^4.1.1"
