--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "material-ui": "^0.20.2",
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
+    "nodemon": "^2.0.6",
     "prop-types": "^15.7.2",
     "proxy": "^1.0.2",
     "react": "^16.13.1",
